<resources>
    <string name="app_name">CapstoneDermApps</string>
    <string name="name_app">Derm App</string>
    <string name="description">Masuk dengan akun anda...</string>
    <string name="input_email">Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="input_pass">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="example_underline"><u>Belum punya akun?</u></string>
    <string name="desc_regis">Daftar akun anda disini yaa..</string>
    <string name="must_filled">Must filled</string>
    <string name="input_name">Name</string>
    <string name="input_age">Age</string>
    <string name="input_gender">Gender</string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <string name="switch_camera">switch camera</string>
    <string name="capture_image">Capture Image</string>
    <string name="description_terms_conditions">1. Aplikasi ini membutuhkan akses kamera agar dapat menangkap foto kulitmu. Foto tersebut akan digunakan untuk dikenali penyakit kulitnya.</string>
    <string name="description_terms_conditions1">2. Aplikasi ini tidak memerlukan seluruh bagian wajah atau badan untuk mendeteksi penyakitnya. Pengguna cukup mengarahkan kamera kepada bagian kulit yang bermasalah untuk aplikasi ini deteksi.</string>
    <string name="camera">Camera</string>
    <string name="image_preview">Image preview</string>
    <string name="invalid_permission">Can\'t get permission</string>
    <string name="about_us">About Us</string>
    <string name="skin_wiki">Skin Wiki</string>
    <string name="scan_wajah">Scan Wajah</string>
    <string name="about_dermapp">Aplikasi DermApps merupakan aplikasi berbasis mobile yang dirancang untuk memudahkan pengguna diatas umur 17-60 tahun untuk mengetahui permasalahan kulit wajah, seperti masalah jerawat dan masalah wajah yang lainnya.</string>
    <string name="log_out_success">Log out sukses</string>
    <string name="continue_">continue</string>
    <string name="welcome">Hi, Welcome to DermApp</string>
    <string name="contact_us">Contact Us</string>
    <string name="skin_ezcema">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="keratosis">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="no_attach_file">No file attached, please attach image first</string>
    <string name="information">Information</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
</resources>