<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/name_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_app"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_user" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc">

        <LinearLayout
            android:id="@+id/lnEmail"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="330dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/vemail"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="40dp"
                    android:layout_height="39dp"/>

                <com.example.capstonedermapps.customview.EditTextEmail
                    android:layout_marginStart="10dp"
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_pass"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_width="330dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/vpass"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>

                <com.example.capstonedermapps.customview.EditTextPassword
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_pass"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    app:passwordToggleEnabled="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/lupa_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="130dp"
                android:text="@string/lupa_password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin_pass" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_login" />

    <TextView
        android:id="@+id/punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/example_underline"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_app"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>