<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:hint="nama"
                android:id="@+id/ed_namahome"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_icon"
            android:layout_marginStart="190dp"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginStart="10dp"
                android:id="@+id/logout"
                android:src="@drawable/ic_logout"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout

        android:id="@+id/ln_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:padding="10dp"
                android:id="@+id/card_scan"
                android:background="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/img_scan"
                    android:layout_gravity="center"
                    android:src="@drawable/scan"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/scan_wajah"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:padding="10dp"
                android:id="@+id/card_wiki"
                android:background="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/img_skinwiki"
                    android:layout_gravity="center"
                    android:src="@drawable/skinwiki"
                    android:layout_width="90dp"
                    android:layout_height="90dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:text="@string/skin_wiki"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:padding="10dp"
                android:id="@+id/card_about"
                android:background="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/img_about"
                    android:layout_gravity="center"
                    android:src="@drawable/aboutus"
                    android:layout_width="90dp"
                    android:layout_height="90dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:text="@string/about_us"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>